--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,7 @@
+main {
+    overflow-y: hidden;
+}
+
 /* -------------------- CONTACT -------------------- */
 
 h2 {
