--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,7 @@
+main {
+    overflow-y: hidden;
+}
+
 /* -------------------- CATALOG -------------------- */
 
 .suggestion {
